fix(theme): Improve styling of popout composer in dark mode

--- a/internal_packages/composer/stylesheets/composer.less
+++ b/internal_packages/composer/stylesheets/composer.less
@@ -279,8 +279,8 @@ body.platform-win32 {
   .composer-inner-wrap {
 
     .composer-action-bar-wrap {
-      background: #fcfcfc;
-      border-top: 1px solid #eaeaea;
+      background: darken(@background-primary, 1%);
+      border-top: 1px solid darken(@background-primary, 8%);
       box-shadow: inset 0 1px 2px rgba(0,0,0,0.03);
     }
 
