--- a/internal_packages/ui-dark/styles/ui-variables.less
+++ b/internal_packages/ui-dark/styles/ui-variables.less
@@ -48,3 +48,7 @@ img.content-dark {
 img.content-light {
   -webkit-filter: invert(100%);
 }
+
+.popover {
+  border: 1px solid @border-primary-bg;
+}
